fluxcd/infrastructure/services/overlays/production/phase-04-platform/crowdsec/deployment-dashboard-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdsec-dashboard
spec:
  replicas: 1
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      imagePullSecrets:
        - name: cr-pcfae-admin-pull-secret
      containers:
        - name: dashboard
          image: cr.pcfae.com/prplanit/crowdsec-dashboard@sha256:d0655b736f3a33ec92fe081691de53010f7349470d8490f082bb078b53801b59
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
