fluxcd/infrastructure/services/overlays/production/phase-04-platform/crowdsec/statefulset-cloudflare-bouncer-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: crowdsec-cloudflare-bouncer
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        ipam.cilium.io/ip-address: "192.168.153.200"
    spec:
      containers:
        - name: cloudflare-bouncer
          image: docker.io/crowdsecurity/cloudflare-worker-bouncer:v0.0.18
          volumeMounts:
            - name: bouncer-config-rendered
              mountPath: /etc/crowdsec/bouncers
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: bouncer-config-template
          configMap:
            name: crowdsec-cloudflare-bouncer
        - name: bouncer-config-rendered
          emptyDir: {}
