fluxcd/infrastructure/services/overlays/production/phase-04-platform/crowdsec/service-crowdsec-dashboard-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdsec-dashboard
  labels:
    policy.prplanit.com/ingress: "true"
