fluxcd/infrastructure/services/overlays/production/phase-04-platform/crowdsec/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crowdsec-dashboard
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Security & IoT (Lens of Truth🔍)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "crowdsec.pcfae.com"
